# auto_os

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
auto_os/: __init__.py  general.py  macos.py  primary.py  windows.py
auto_os/fs/: __init__.py  fs_macos.py  fs_windows.py
auto_os/pe/: __init__.py  pe_macos.py  pe_windows.py
auto_os/wm/: __init__.py  wm_macos.py  wm_windows.py
test/: screenshot_test.ipynb  window_info.ipynb  window_info_test.py
tests/: window_info.ipynb
