[tool.poetry]
name = "auto-os"
version = "0.1.0"
description = "The OS (Operating System) module of the Auto project"
authors = ["wentao <mr.huwt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tenacity = "^8.3.0"
PyAutoGUI = "^0.9.54"
pyperclip = "^1.9.0"
loguru = "^0.7.2"
pyobjc-framework-Quartz = "^10.3.1"
PyCocoa = "^23.12.28"
pillow = "^10.4.0"
typing-extensions = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
